# hexarena

./: README.md  pyproject.toml
.github/workflows/: ci.yml
hexarena/: __init__.py  dice.py  hex.py  layout.py  pathfinding.py
tests/: test_dice.py  test_hex.py  test_layout.py  test_pathfinding.py
